adicionei até o metodo 5

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
                 </a>
             </li>
             <li class="item-menu">
-                <a href="#">
+                <a href="ex2.html">
                     <span class="icon"><i class="bi bi-2-square"></i></span>
                     <span class="text-link">Exercício 2</span>
                 </a>
             </li>
             <li class="item-menu">
-                <a href="#">
+                <a href="ex3.html">
                     <span class="icon"><i class="bi bi-3-square"></i></span>
                     <span class="text-link">Exercício 3</span>
                 </a>
@@ -46,13 +46,13 @@
                 </a>
             </li>
             <li class="item-menu">
-                <a href="#">
+                <a href="ex5.html">
                     <span class="icon"><i class="bi bi-5-square"></i></span>
                     <span class="text-link">Exercício 5</span>
                 </a>
             </li>
             <li class="item-menu">
-                <a href="#">
+                <a href="ex6.html">
                     <span class="icon"><i class="bi bi-6-square"></i></span>
                     <span class="text-link">Exercício 6</span>
                 </a>
