--- a/reta.html
+++ b/reta.html
@@ -30,13 +30,13 @@
                 </a>
             </li>
             <li class="item-menu">
-                <a href="#">
+                <a href="ex2.html">
                     <span class="icon"><i class="bi bi-2-square"></i></span>
                     <span class="text-link">Exercício 2</span>
                 </a>
             </li>
             <li class="item-menu">
-                <a href="#">
+                <a href="ex3.html">
                     <span class="icon"><i class="bi bi-3-square"></i></span>
                     <span class="text-link">Exercício 3</span>
                 </a>
@@ -48,13 +48,13 @@
                 </a>
             </li>
             <li class="item-menu">
-                <a href="#">
+                <a href="ex5.html">
                     <span class="icon"><i class="bi bi-5-square"></i></span>
                     <span class="text-link">Exercício 5</span>
                 </a>
             </li>
             <li class="item-menu">
-                <a href="#">
+                <a href="ex6.html">
                     <span class="icon"><i class="bi bi-6-square"></i></span>
                     <span class="text-link">Exercício 6</span>
                 </a>
@@ -64,7 +64,7 @@
     <main>
         <h1>Calculadora de Distância de um Ponto a uma Reta</h1>
 
-        <div id="distanceForm">
+        <div class="distanceForm">
             <div>
                 <h3 class="subtitulo fs-1">Ponto P0 (x0, y0, z0)</h3>
                 <label for="x0">x0:</label>
@@ -96,11 +96,11 @@
                 </div>
             </div>
 
-            
+
         </div>
         <button class="rodar" type="button" onclick="calculateDistance()">Calcular Distância</button>
         <h3>Distância:</h3>
-        <p id="result"></p>
+        <p class="result" id="result"></p>
 
         <script>
             function calculateDistance() {
