--- a/ex1.html
+++ b/ex1.html
@@ -71,7 +71,7 @@
             Insira o vetor diretor V(x, y, z) (separado por espaços):<br>
             <input type="text" id="vetor1">
         </label><br>
-        <button onclick="retaParametrica()">Executar</button>
+        <button onclick="retaParametrica()">Calcular</button>
         <div id="resp1" class="resposta"></div>
     </main>
     <script>
