--- a/ex2.html
+++ b/ex2.html
@@ -71,7 +71,7 @@
             Insira o vetor normal N(x, y, z) ao plano (separado por espaços):<br>
             <input type="text" id="vetor2">
         </label><br>
-        <button onclick="equacaoGeral()">Executar</button>
+        <button onclick="equacaoGeral()">Calcular</button>
         <div id="resp2" class="resposta"></div>
     </main>
     <script>
