--- a/ex3.html
+++ b/ex3.html
@@ -71,7 +71,7 @@
             Insira o ponto P(x, y, z) (separado por espaços):<br>
             <input type="text" id="ponto3">
         </label><br>
-        <button onclick="distanciaPonto()">Executar</button>
+        <button onclick="distanciaPonto()">Calcular</button>
         <div id="resp3" class="resposta"></div>
     </main>
     <script>
