--- a/ex5.html
+++ b/ex5.html
@@ -62,7 +62,7 @@
         </ul>
     </nav>
     <main>
-        <h1>Calcule a distância entre os planos paralelos</h1>
+        <h1>Distância entre os planos</h1>
         <div class="distanceForm">
             <div>
                 <h3>Plano π1: Ax + By + Cz + D = 0</h3>
@@ -92,7 +92,7 @@
             </div>
         </div>
         <br><br>
-        <button onclick="calcularDistancia()">Calcular Distância</button>
+        <button onclick="calcularDistancia()">Calcular</button>
 
         <h3>Resultado:</h3>
         <p class="result" id="resultado"></p>
