--- a/ex6.html
+++ b/ex6.html
@@ -62,7 +62,7 @@
         </ul>
     </nav>
     <main>
-        <h1>Calcular a Distância entre Retas no Espaço</h1>
+        <h1>Distância entre Retas</h1>
         <div class="distanceForm2">
             <div class="distanceForm2">
                 <h3>Entrada para a reta R1</h3>
@@ -94,7 +94,7 @@
         </div>
 
         <br><br>
-        <button onclick="calcularDistancia()">Calcular Distância</button>
+        <button onclick="calcularDistancia()">Calcular</button>
 
         <h3>Resultado:</h3>
         <p id="resultado" class="subtitulo"></p>
