--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
     <main>
         <h1>Trabalho de GAAL</h1>
         <h3 class="subtitulo">Escolha o exercício no menu ao lado.</h3>
+        <h5 class="subtitulo mt-2"><b>Dupla: </b> Helena Rezende e Gustavo Guimarães</h5>
     </main>
 </body>
 </html>
